crates/sgf-core/tests/snapshots/ops/set_lane_length_788_760.snap
---
source: crates/sgf-core/tests/ops.rs
expression: "report(&session, &result)"
---
Set lane 788 <-> 760 length from 20.70131 to 21.5 (2 entries)
touched: [760, 788]
inverse: SetLaneLength { a: 788, b: 760, length: 20.70131 }
… and 6 other issues

--- gamestate
+++ gamestate
@@ -80577,7 +80577,7 @@
  
 			{
 				to=788
-				length=20.70131
+				length=21.5
 			}
  
 		}
@@ -82393,7 +82393,7 @@
 			
 			{
 				to=760
-				length=20.70131
+				length=21.5
 			}
  
 		}
